Corrected ratio and spacing in header

--- a/styles.css
+++ b/styles.css
@@ -21,29 +21,54 @@ body {
     font-family:Arial, Helvetica, sans-serif;
 }
 
-.Me {
-    width: 144px;
-    height: 144px;
-    border-radius: 24px;
-    margin-right: 2em;
-}
-
-.Introduction {
+header {
     display: flex;
-    width: 82em;
-    height: 19em;
+    width: 82.611875em;
+    height: 18.75625em;
     padding: 20px;
     margin: 30px;
     border-radius: 24px;
+    justify-self: center;
 }
 
 .intro {
-    display: inline-block;
+    /*display: inline-block;
     text-align: start;
     border-radius: 1.8em;
+    padding-left: 1.5em;*/
     background-color: var(--box);
     border: 2px solid var(--box);
-    padding-left: 1.5em;
+    
+    width: 62.168125em;
+    height: 18.75625em;
+    border-radius: 1.5em;
+    object-fit: cover;
+    
+}
+
+.Me {
+    width: 18.75625em;
+    height: 18.75625em;
+    border-radius: 1.5em;
+    object-fit: cover;
+    /*margin-right: 2em;*/
+    margin-right: 1.6875em;
+}
+
+/* CALCULATIONS: 
+   (Introduction) header width - .intro width - .Me width = space between pic and bio (1.6875) */
+
+.intro > p {
+    display: flex;
+    flex-direction: row;
+    line-height: 1.5em;
+}
+
+.my-name {
+    text-align: left;
+    display: flex;
+    flex-direction: row;
+    margin-bottom: 0;
 }
 
  /* Proficiency Section */
